--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,21 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
+    
     <title>E-Commerce</title>
 </head>
 <body>
     <div class="nav-bar-top">
-        <div>COROTOS</div>
-        <div>
-            <form method="get" action="/search">
-                <input id="search" type="text" class="search-bar" value name="search">
-            <div class="search-button"></div>
-            </form>
-            
+        <div class="space"></div>
+        <div class="nav-bar-area">
+            <div class="logo">COROTOS</div>
+
+            <div class="search-bar-area">
+                <form class="form-search" method="get" action="/search">
+                    <input id="search" type="text" class="search-input" value name="search" placeholder="Busca el hogar de tus suenos...">
+                <div class="search-button"><img class="search-icon" src="images/lupaIcon.png"></div>
+                
+                </form>
+            </div>
+            <div>Iniciar Sesion</div>
+            <div>Publicar</div>
         </div>
+        
+
+   
+        <div class="space"></div>
     </div>
     <div class="nav-bar-button">
 
     </div>
+
+
 </body>
 </html>
