--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,4 +1,68 @@
+body {
+    margin: 0px;
+}
+
 .nav-bar-top {
     background-color: #1d477a;
     display: flex;
+    height: 63px;
+    margin-top: 0px;
+}
+
+.space {
+    flex: 0.5;
+    background-color: black;
+}
+
+.nav-bar-area {
+    flex: 7;
+    display: flex;
+}
+.logo {
+    width: 150px;
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+    font-weight: bolder;
+    color: white;
+}
+.search-bar-area {
+    background-color: purple;
+    display: flex;
+    width: 700px;
+}
+.form-search {
+    display: flex;
+    align-items: center;
+}
+
+.search-input {
+ width: 580px;
+ margin-left: 15px;
+ height: 25px;
+ padding: 8px 10px 8px 16px;
+ outline: none;
+ border: none;
+ border-top-left-radius: 6px;
+ border-bottom-left-radius: 6px;
+ font-size: 15px;
+}
+
+.search-button {
+    background-color: #FACC00;
+    width: 41px;
+    height: 41px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+
+.prueba {
+
+}
+
+.search-icon {
+    height: 20px;
 }
